--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
     "clean-css-cli": "^5.2.1",
     "onchange": "^7.1.0",
     "tailwindcss": "^2.0.3"
+  },
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.1.3",
+    "cssnano": "^4.1.10",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0"
   }
 }
